k8s/paperless-ngx/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: paperless-ngx
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: pg
      protocol: TCP
      name: pg
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: redis
      protocol: TCP
      name: redis
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: tika
spec:
  type: ClusterIP
  ports:
    - port: 9998
      targetPort: tika
      protocol: TCP
      name: redis
  selector:
    app: tika
---
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: gotenberg
      protocol: TCP
      name: redis
  selector:
    app: gotenberg
