k8s/paperless-ngx/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`papers.kevingomez.fr`)
      services:
        - kind: Service
          name: paperless-ngx
          port: http
  tls:
    certResolver: letsencrypt
